add_subdirectory(BBE)
if(BBE_RENDER_MODE STREQUAL "Vulkan")
  add_subdirectory(Vulkan)
elseif(BBE_RENDER_MODE STREQUAL "NullRenderer")
  add_subdirectory(NullRenderer)
elseif(BBE_RENDER_MODE STREQUAL "OpenGL"
    OR BBE_RENDER_MODE STREQUAL "Emscripten")
  add_subdirectory(OpenGL)
endif()
add_subdirectory(Assets)

file(GLOB local_src CONFIGURE_DEPENDS "*.cpp")
if(NOT BBE_ADD_AUDIO)
  foreach(audio_src IN ITEMS Microphone Sound SoundGenerator SoundInstance SoundManager)
    list(FILTER local_src EXCLUDE REGEX ".*/${audio_src}\\.cpp$")
    list(FILTER local_src EXCLUDE REGEX "${audio_src}\\.cpp$")
  endforeach()
endif()
if(NOT BBE_ADD_PYTHON)
  list(FILTER local_src EXCLUDE REGEX ".*/SimplePythonInterpreter\\.cpp$")
  list(FILTER local_src EXCLUDE REGEX "SimplePythonInterpreter\\.cpp$")
endif()
target_sources(BrotBoxEngine PRIVATE "${local_src}")

target_include_directories(BrotBoxEngine PUBLIC .)

if (WIN32)
  add_subdirectory(GlobalKeyboardDLL)
endif()
