add_subdirectory(Example2DPhysicsBallPit)
add_subdirectory(Example2DPhysicsChainReaction)
add_subdirectory(Example3D)
add_subdirectory(ExampleBalloonGame)
add_subdirectory(ExampleConvexHull)
add_subdirectory(ExampleCurves)
add_subdirectory(ExampleDivergence)
add_subdirectory(ExampleDoublePendulum)
add_subdirectory(ExampleFlowField)
add_subdirectory(ExampleFluidSimulation)
add_subdirectory(ExampleMandelbrot)
add_subdirectory(ExampleMandelbrotShader)
add_subdirectory(ExampleMandelbrotSIMD)
add_subdirectory(ExampleNeuralRocket)
add_subdirectory(ExampleParticleGravity)
add_subdirectory(ExampleParticleLife)
add_subdirectory(ExamplePendulumChaosShader)
if(BBE_ADD_AUDIO)
  add_subdirectory(ExamplePixelObserver)
endif()
add_subdirectory(ExampleRotatingCubeIntersections)
add_subdirectory(ExampleRotatingRectangleIntersections)
add_subdirectory(ExampleSandGame)
if(BBE_ADD_EXPERIMENTAL)
  add_subdirectory(ExampleSimplePresentation)
endif()
add_subdirectory(ExampleSignedDistanceField)
add_subdirectory(ExampleSnake)
add_subdirectory(ExampleSnake3D)
if(BBE_ADD_AUDIO)
  add_subdirectory(ExampleSound)
  add_subdirectory(ExampleSoundDataSource)
endif()
add_subdirectory(ExampleStreamCountdown)
add_subdirectory(ExampleTemplate)
add_subdirectory(ExampleTerrain)
add_subdirectory(ExampleTesseract)
add_subdirectory(ExampleTextRendering)
add_subdirectory(ExampleWaveDrawer)

