add_subdirectory(Example2DPhysicsBallPit)
add_subdirectory(Example2DPhysicsChainReaction)
add_subdirectory(Example3D)
if(BBE_ADD_EXPERIMENTAL)
  add_subdirectory(ExampleBackroomsGenerator)
endif()
add_subdirectory(ExampleBalloonGame)
add_subdirectory(ExampleConvexHull)
add_subdirectory(ExampleCurves)
add_subdirectory(ExampleDivergence)
add_subdirectory(ExampleDoublePendulum)
add_subdirectory(ExampleFlowField)
add_subdirectory(ExampleFluidSimulation)
if(BBE_ADD_EXPERIMENTAL)
  add_subdirectory(ExampleGrid)
endif()
add_subdirectory(ExampleMandelbrot)
if(BBE_RENDER_MODE STREQUAL "Vulkan") # Shaders are Renderer specific
  add_subdirectory(ExampleMandelbrotShader)
endif()
if(WIN32)
  add_subdirectory(ExampleMandelbrotSIMD)
endif()
add_subdirectory(ExampleNeuralRocket)
add_subdirectory(ExampleParticleGravity)
add_subdirectory(ExampleParticleLife)
if(BBE_RENDER_MODE STREQUAL "Vulkan") # Shaders are Renderer specific
  add_subdirectory(ExamplePendulumChaosShader)
endif()
add_subdirectory(ExamplePhasmophobiaCheatSheet)
if(BBE_ADD_AUDIO)
  add_subdirectory(ExamplePixelObserver)
endif()
add_subdirectory(ExampleRotatingCubeIntersections)
add_subdirectory(ExampleRotatingRectangleIntersections)
add_subdirectory(ExampleSandGame)
if(BBE_ADD_EXPERIMENTAL)
  add_subdirectory(ExampleSimplePresentation)
endif()
if(BBE_RENDER_MODE STREQUAL "Vulkan") # Shaders are Renderer specific
  add_subdirectory(ExampleSignedDistanceField)
endif()
add_subdirectory(ExampleSnake)
add_subdirectory(ExampleSnake3D)
if(BBE_ADD_AUDIO)
  add_subdirectory(ExampleSound)
  add_subdirectory(ExampleSoundDataSource)
endif()
add_subdirectory(ExampleStreamCountdown)
add_subdirectory(ExampleTemplate)
if(BBE_RENDER_MODE STREQUAL "Vulkan") # Terrain currently only works on Vulkan
  if(BBE_ADD_EXPERIMENTAL)
    add_subdirectory(ExampleTerrain)
  endif()
endif()
add_subdirectory(ExampleTesseract)
add_subdirectory(ExampleTextRendering)
if(BBE_ADD_EXPERIMENTAL)
  add_subdirectory(ExampleVectorField)
endif()
add_subdirectory(ExampleWaveDrawer)
if(BBE_ADD_EXPERIMENTAL)
  add_subdirectory(ExampleWaveFunctionCollapse)
endif()
